[package]
name = "websocket-subscriber-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = {version = "0.8.4", features = ["ws"]}
axum-macros = "0.5.0"
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["full"]}
tower-http = {version = "0.6.6", features = ["cors"]}
uuid = {version = "1.18.1", features = ["v4"]}
